# goit-web-hw-12

./: .env.example  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: f04af7b3cc5b_init.py
src/app_contacts/: repository_contacts.py  routes_contacts.py  schemas_contact.py
src/app_users/: repository_users.py  routes_auth.py  services_auth.py  shemas_user.py
src/config/: config.py
src/database/: db.py
src/entity/: models.py
